# should-i-take-the-train

./: Cargo.toml  LICENSE  README.md
src/: main.rs  weather.rs
src/weather/: api.rs  models.rs
src/weather/models/: autocomplete.rs  hourly_forecast.rs
