[package]
name = "should-i-take-the-train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive", "alloc"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
